syntax = "proto3";

package user;

service AuthServiceGrpc {
    rpc register (InputRegisterRequest) returns (RegisterResponse) {}
    rpc login (InputLoginRequest) returns (LoginResponse) {}
}

message InputLoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string accessToken = 2;
}

message InputRegisterRequest {
    string email = 1;
    string password = 2;
    string confirmPassword = 3;
    string fullName = 4;
    string phone = 5;
    string merchantPhone = 6;
    string merchantName = 7;
    string merchantAddress = 8;
    int32 cityCode = 9;
    int32 districtCode = 10;
    int32 wardCode = 11;
    string merchantSubdomain = 12;
}

message RegisterResponse {
    string accessToken = 1;
    User user = 2;
    Profile profile = 3;
}

message InputPermissionRequest {
    int32 id = 1;
    string email = 2;
}

message PermissionResponse {
    bool isAdmin = 1;
}

enum UserRole {
    ADMIN = 1;
    USER = 2;
}

message User {
    int32 id = 1;
    string email = 2;
    string username = 3;
    string age = 4;
    UserRole role = 5;
    int32 createdAt = 6;
    int32 updatedAt = 7;
}

message Profile {
    int32 id = 1;
    string fullName = 2;
    string phone = 3;
    EProfileType type = 4;
    string address = 5;
    int32 cityCode = 6;
    int32 districtCode = 7;
    int32 wardCode = 8;
    int32 dateOfBirth = 9;
    int32 monthOfBirth = 10;
    int32 yearOfBirth = 11;
    int32 userId = 12;
    int32 createdAt = 13;
    int32 updatedAt = 14;
}

enum EProfileType {
    CUSTOMER = 1;
    EMPLOYEE = 2;
}